--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="color-scheme" content="dark light" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Hello world</h1>
-</body>
+  </body>
 </html>
